# douyin-downloader

./: .prettierrc  README.md  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
scripts/: update.mjs
src/: app.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: command.rs  main.rs  menu.rs
src/api/: index.ts
src/components/about/: index.pug  index.styl  index.vue
src/components/main/: index.pug  index.styl  index.vue
src/components/menu/: index.pug  index.styl  index.vue
src/components/multiple/: index.pug  index.styl  index.vue
src/components/single/: index.pug  index.styl  index.vue
src/components/updater/: index.pug  index.styl  index.vue
src/enums/: index.ts
src/i18n/: index.ts
src/i18n/locales/: cn.yml  en.yml
src/router/: index.ts
src/store/: index.ts
src/styles/: global.styl  index.ts
src/utils/: index.ts
